--- a/public/src/my-app/my-app.html
+++ b/public/src/my-app/my-app.html
@@ -16,6 +16,7 @@
 
 <!-- Import my custom elements -->
 <link rel="import" href="../leaderboard-page/leaderboard-page.html">
+<link rel="import" href="../profiles-page/profiles-page.html">
 
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 
@@ -223,7 +224,7 @@
           </div>
 
           <leaderboard-page id="leaderboardElement" page="leaderboard"></leaderboard-page>
-          <div page="profiles">Profiles</div>
+          <profiles-page id="profilesElement" page="profiles"></profiles-page>
         </iron-pages>
 
       </app-drawer-layout>
