Finishing search UI for profiles page

--- a/public/src/leaderboard-page/leaderboard-page.html
+++ b/public/src/leaderboard-page/leaderboard-page.html
@@ -105,7 +105,7 @@
       <div id="container" class="vertical layout">
         <div id="top" class="horizontal layout end">
           <div id="topLeft" class="vertical layout">
-            <div id="topLeftTitle">[ MBR Leaderboard ]</div>
+            <div id="topLeftTitle">MBR Leaderboard</div>
             <div id="topLeftMenu">Sort by:
               <paper-button id="apSort" class="sortButton" on-click="_changeSort" sort="ap" raised style="min-width: 40px" disabled>AP</paper-button>
               <paper-button id="winSort" class="sortButton" on-tap="_changeSort" sort="win" raised style="min-width: 60px">Wins</paper-button>
